fix the model using emotion_face_fer2013 for tesing

--- a/.gitignore
+++ b/.gitignore
@@ -324,3 +324,7 @@ thumb
 sketch
 
 # End of https://www.toptal.com/developers/gitignore/api/python,node,react
+
+# project specific
+ai_models/
+moosic.db
