--- a/dev/backend/example.env
+++ b/dev/backend/example.env
@@ -1,1 +1,4 @@
 JWT_SECRET_KEY=your-very-secure-random-key
+SPOTIFY_CLIENT_ID=your_client_id
+SPOTIFY_CLIENT_SECRET=your_client_secret
+SPOTIFY_REDIRECT_URI=http://127.0.0.1:5001/callback
